Refactor analyses data flow and update backend endpoints
Introduces getCurrentFormData methods to all analysis form and list components for consistent data collection. Updates the Bacteriology and Radiology models to use simpler data structures (e.g., germs as number[] and removal of conclusion from Radiology). Refactors backend endpoints and services to support new data flow, including passing consultationId and adding update endpoints. Synchronizes frontend and backend to ensure analyses data is correctly emitted, collected, and persisted.